Update bigmac recipe and index.html
Resized image for bigmac and added image link in the body

Updated index.html to link to the bigmac recipe

--- a/recipes/bigmacbowl.html
+++ b/recipes/bigmacbowl.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1> Big Mac Bowl </h1>
-    <img src="./images/bigmacbowl.jpg">
+    <img src="../images/bigmacsaladbowls.jpg" alt = "Big Mac Salad Bowl" height="200" width="200">
 </body>
 </html>
