Add changes to Big Mac Bowl recipe page
Updated Ingredients and Steps lists
Corrected minor typos within Big Mac Bowl html

--- a/recipes/bigmacbowl.html
+++ b/recipes/bigmacbowl.html
@@ -8,5 +8,29 @@
 <body>
     <h1> Big Mac Bowl </h1>
     <img src="../images/bigmacsaladbowls.jpg" alt = "Big Mac Salad Bowl" height="200" width="200">
+    <h2> Description </h2>
+        <p> A filling, protein packed dinner that reminds you of McDonald's iconic sandwich... The Big Mac.
+            This dish provides almost all the enjoyment with no guilt, allowing you to reach fitness goals while enjoying a tasty meal.
+            Pair this with a nice Diet Coke or Diet Lemonade and you'll be 2 in 2.
+            All you need is some ground beef, shredded lettuce / cabbage, onions, cheese and seasonings, and we'll make our own high-protein Thousand Islands dressing. I promise you, you won't be able to taste the difference. </p>
+    <h2> Ingredients </h2>
+            <ul>
+                <li> 90 / 10 Ground Beef </li>
+                <li> Shredded Low-Fat American Cheese </li>
+                <li> Diced Onion </li>
+                <li> Diced Dill Pickles</li>
+                <li> Thousand Island Dressing</li>
+                <li> Greek Yogurt </li>
+                <li> Mayonnaise</li>
+                <li> Seasoning blend: Salt, Pepper, Garlic Powder, Onion Powder</li>
+            </ul>
+    <h2> Steps </h2>
+            <ol> 
+                <li> Wash and shred your lettuce and add to a bowl with diced onions and pickles. </li>
+                <li> Combine 1 part mayo, 2 parts thousand island dressing, and 2 parts greek yogurt to the shredded lettuce / diced pickles and onion from Step #1. Mix thoroughly. This will be the base of your salad bowl. </li>
+                <li> Season your ground beef with salt, pepper, garlic powder and onion powder. Cook over medium high heat until meat is cooked to your liking. </li>
+                <li> Add cooked beef over the salad / pickle / onion base. Top with lowfat shredded cheese and a little of our homemade high-protein Thousand Island dressing. </li>
+                <li> Enjoy your nice cooked meal!</l1>
+            </ol>
 </body>
 </html>
