Add locomoco and BuffaloChix recipes and steps
Added more information to the LocoMoco and BuffaloChickenBowl html pages.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/bigmacbowl.html">Big Mac Bowl </a>
+    <a href ="recipes/locomoco.html"> Loco Moco </a>
+    <a href = "recipes/buffchixbowl.html"> Buffalo Chicken Bowl </a>
 </body>
 </html>
