Updated index header and recipe titles
Updated the index header to reflect my name

Updated the recipe titles for accuracy

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/bigmacbowl.html">Big Mac Bowl </a>
-    <a href ="recipes/locomoco.html"> Loco Moco </a>
-    <a href = "recipes/buffchixbowl.html"> Buffalo Chicken Bowl </a>
+    <h1>Fines Owens - Recipes</h1>
+    <p><a href="recipes/bigmacbowl.html">Big Mac Bowl </a></p>
+    <p><a href ="recipes/locomoco.html"> Loco Moco </a></p>
+    <p><a href = "recipes/buffchixbowl.html"> Buffalo Chicken Bowl </a></p>
 </body>
 </html>
