--- a/recipes/buffchixbowl.html
+++ b/recipes/buffchixbowl.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Big Mac Bowl </h1>
+    <h1> Buffalo Chicken Bowl </h1>
     <img src="../images/buffalochicken.jpeg" alt = "Buffalo Chicken Bowl" height="200" width="200">
     <h2> Description </h2>
         <p> Another filling, protein packed dinner that reminds you of hot wings, celery and blue cheese.
