--- a/recipes/locomoco.html
+++ b/recipes/locomoco.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Big Mac Bowl </h1>
+    <h1> Loco Moco </h1>
     <img src="../images/locomoco.jpeg" alt = "Loco Moco" height="200" width="200">
     <h2> Description </h2>
         <p> A Hawaiian comfort-food classic, the Loco Moco has been one of my personal favorite meals in the past few months. The dish includes white rice, ground beef, a homemade gravy, and a nice fried egg on top. This is hearty, filling, and so damn good. If you're into SPAM (Not a big fan of the canned meats myself) definitely give a slice a sear and incorporate it into this Hawaiian Classic. </p>
