--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Fines Owens - Recipes</h1>
-    <p><a href="recipes/bigmacbowl.html">Big Mac Bowl </a></p>
-    <p><a href ="recipes/locomoco.html"> Loco Moco </a></p>
-    <p><a href = "recipes/buffchixbowl.html"> Buffalo Chicken Bowl </a></p>
+     <h1>Fines Owens - Recipes</h1>
+     <a href="recipes/bigmacbowl.html">Big Mac Bowl </a>
+     <a href ="recipes/locomoco.html"> Loco Moco </a>
+     <a href = "recipes/buffchixbowl.html"> Buffalo Chicken Bowl </a>
 </body>
 </html>
